# descargadeactas

./: .gitignore  README.md  procesar_actas.py  pyproject.toml
